# optimization_course

./: .gitignore
lecture/: run.bat
lecture/gamma_rgb_v0_base_novec/: gamma_rgb_v0_base_novec.cpp
lecture/gamma_rgb_v1_ivdep/: gamma_rgb_v1_ivdep.cpp
lecture/gamma_rgb_v2_xHost/: gamma_rgb_v2_xHost.cpp
lecture/gamma_rgb_v3_unroll/: gamma_rgb_v3_unroll.cpp
lecture/gamma_rgb_v4_mem_access/: gamma_rgb_v4_mem_access.cpp
lecture/gamma_rgb_v5_type/: gamma_rgb_v5_type.cpp
lecture/gamma_rgb_v6_mem_align/: gamma_rgb_v6_mem_align.cpp
lecture/gamma_rgb_v7_zmm/: gamma_rgb_v7_zmm.cpp
lecture/gamma_rgb_v8_zmm_novec/: gamma_rgb_v8_zmm_novec.cpp
lecture/gamma_rgba_v0_novec/: bmp_reader.h  gamma_rgba_v0_novec.cpp
lecture/gamma_rgba_v1_vec/: gamma_rgba_v1_vec.cpp
lecture/integral_v0_novec/: integral_v0_novec.cpp
lecture/integral_v1_try_vec/: integral_v1_try_vec.cpp
lecture/integral_v2_pragma_simd/: integral_v2_pragma_simd.cpp
lecture/memory_benchmark/: memory_benchmark.cpp
lecture/reduction_v0_novec/: reduction_v0_novec.cpp
lecture/reduction_v1_vec/: reduction_v1_vec.cpp
practice/: CMakeLists.txt
practice/opt/v1_base_vector/: Model.h  Particle.h  Vector3.h  test.cpp
practice/opt/v2_SDLT/: Model.h  Particle.h  Vector3.h  test.cpp
practice/opt/v3_SoA/: Model.h  Particle.h  test.cpp
practice/opt/v4_no_div/: Model.h
practice/opt/v5_c_style/: Model.h  test.cpp
practice/opt/v6_chunks/: Model.h  test.cpp
practice/src/include/: Model.h  Particle.h  Vector3.h
practice/src/view/: view.cpp
